--- a/escola/src/tela/manutencao/ManutencaoEscola.form
+++ b/escola/src/tela/manutencao/ManutencaoEscola.form
@@ -223,7 +223,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&#xc1;REA (m2);"/>
+        <Property name="text" type="java.lang.String" value="&#xc1;REA (m2):"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtfArea">
